
- ZON-2948: ZEIT Campus article header image landscape

- ZON-2497: Add missing elements to centerpage of centerpages

- ZON-2943: Move sharing tools to core and include them in Campus articles

- ZON-2896: Add tracking ids to ZMO and ZCO navigation

- ZON-2991: Fix links in ZCO navigation

- MAINT: Adjust tracking IDs in article footer

- BUG-405: Do not use duplicate IDs for infoboxes


2.73 (2016-04-21)
-----------------

- ZON-2962: Polish ZEIT Campus

- ZON-2983: Include meetrics in ZEIT Campus

- ZON-2920: Add Advertorial Logic and Styles to Campus

- ZON-2975: Add ZEIT Campus page title suffix

- ZON-2986: Activate ad reloading in Campus

- ZON-2994: Change servicebox XML format to include actual columns
  !! production uses /data/servicebox-zon.xml now instead of /data/servicebox.xml !!

- OPS-282: Erase some HTML validation errors

- MAINT: Speed up appserver start by not loading unnecessary zope ZCML

- BUG-384: Place first ad after min 100 words in facebook instantarticles

- FIX: Transmit email properly to rawr


2.72 (2016-04-18)
-----------------

- HOTFIX: Add a bit more teaser margin for zmo-landscape-large

- ZON-2499: Campus CP-Header

- ZON-2942: Use ZON/core metadata for dates etc. in Campus

- ZON-2980: Configure rawr return url parameter to work with our SSO

- ZON-2906: Add module headerimage to ZEIT Campus

- ZON-2990: Add image copyrights to ZEIT Campus

- ZON-2522: Introduce comments to ZEIT Campus

- ZON-2961: SVG – back to the roots (render SVGs inline)

- ZON-2988: Change STOA from automatic placement to normal article module

- FIX: Use correct xml namespace in zett feed

- FIX: Support non-ascii uniqueIds (and other bugsnag)

- BUG-396: Enable nextread link and image copyrights

- BUG-377 part 2: Set default sort order to "recent"

- BUG-390: Replace Adtile 1 with amp-ad code

- MAINT: Fix ZEIT Campus column article header image


2.71.3 (2016-04-13)
-------------------

- HOTFIX: Make ranking areas work again on dynamic centerpages
