@@ -53,8 +53,8 @@ define([ 'jquery', 'velocity.ui' ], function( $, Velocity ) {
                 var control = $( this ),
                     expanded = control.attr( 'aria-expanded' ) === 'true';
 
-                // in mobile view we want to follow the link
-                if ( !window.Zeit.isMobileView() ) {
+                // in mobile view we sometimes want to follow the link
+                if ( !( window.Zeit.isMobileView() && $( this ).data( 'follow-mobile' ) ) ) {
                     event.preventDefault();
                     toggleElement( control, !expanded );
                 }
