@@ -21,5 +21,6 @@
 			</a>
 		</li>
 	</ul>
-	<a href="http://studienfuehrer-test.zeit.de/artikel/was-soll-ich-studieren.html" class="nav-flyout__sit-link" data-id="campus-topnav.2.5..was soll ich studieren">Was soll ich studieren? {{ lama.use_svg_icon('arrow-right', 'nav-flyout__arrow', view.package) }}</a>
+	<!-- change link when ready (as) -->
+	<a href="http://studienfuehrer.zeit.de/artikel/was-soll-ich-studieren.html" class="nav-flyout__sit-link" data-id="campus-topnav.2.5..was soll ich studieren">Was soll ich studieren? {{ lama.use_svg_icon('arrow-right', 'nav-flyout__arrow', view.package) }}</a>
 </aside>
