@@ -63,7 +63,8 @@
             <a class="nav__topics-link" href="http://www.zeit.de/campus/themen" data-id="campus-topnav.2.4..alle themen">Alle Themen</a>
         </nav>
         <nav class="nav__tools">
-            <h2 class="nav__tools-title"><a href="http://studienfuehrer-test.zeit.de/artikel/was-soll-ich-studieren.html" data-id="campus-topnav.2.5..was soll ich studieren" role="button" aria-controls="tools-menu"><span class="nav__dropdown">Was soll ich studieren?</span></a></h2>
+            <!-- change link when ready (as) -->
+            <h2 class="nav__tools-title"><a href="http://studienfuehrer.zeit.de/artikel/was-soll-ich-studieren.html" data-id="campus-topnav.2.5..was soll ich studieren" role="button" aria-controls="tools-menu" data-follow-mobile="true"><span class="nav__dropdown">Was soll ich studieren?</span></a></h2>
             <ul class="nav__tools-list">
                 <li><a href="http://studiengaenge.zeit.de/sit" data-id="campus-topnav.2.5.1.studium interessentest">Studium-Interessentest</a></li>
                 <li><a href="http://studiengaenge.zeit.de/studienangebote" data-id="campus-topnav.2.5.2.suchmaschine für studiengänge">Suchmaschine für Studiengänge</a></li>
